# SCORBOT-ER-VII

./: README.md
scorbot_ws/devel/: .catkin
scorbot_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
scorbot_ws/devel/.private/gazebo_tutorials/: .catkin  .rosinstall  setup.sh
scorbot_ws/devel/.private/robot_control/: .catkin  .rosinstall  setup.sh
scorbot_ws/devel/.private/robot_description/: .catkin  .rosinstall  setup.sh
scorbot_ws/devel/.private/robot_gazebo/: .catkin  .rosinstall  setup.sh
scorbot_ws/devel/.private/robot_pkg/: .catkin  .rosinstall  setup.sh
scorbot_ws/devel/.private/rrbot_control/: .catkin  .rosinstall  setup.sh
scorbot_ws/devel/.private/rrbot_description/: .catkin  .rosinstall  setup.sh
scorbot_ws/devel/.private/rrbot_gazebo/: .catkin  .rosinstall  setup.sh
scorbot_ws/src/robot/robot_description/: CMakeLists.txt  package.xml
scorbot_ws/src/robot/robot_description/Launch/: robot.rviz  robot_rviz.launch
scorbot_ws/src/robot/robot_description/meshes/BkUpVisual/: Gripper_base.dae  Gripper_left.dae  Gripper_right.dae  Parte_5.DAE  Parte_5x.DAE  Parte_5xb.DAE  Parte_6x.DAE  Parte_6xa.DAE  Parte_6xb.DAE
scorbot_ws/src/robot/robot_description/meshes/collision/: Base.DAE  Gripper.DAE  Parte_5.DAE
scorbot_ws/src/robot/robot_description/meshes/visual/: Base.stl  Parte_3.stl  Parte_4.stl
scorbot_ws/src/robot/robot_description/urdf/: robot.gazebo  robot.urdf  robot.xacro
scorbot_ws/src/robot/robot_gazebo/: CMakeLists.txt  package.xml
scorbot_ws/src/robot/robot_pkg/: CMakeLists.txt
(+57 files in other folders)
