<package>
  <name>robot_description</name>
  <version>0.1.0</version>
  <description>robot_description</description>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>


  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>robot_control</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
